# doc-retrieval-qa

./: README.md  pyproject.toml  requirements.txt
data/: url.txt
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py  react_node.py
src/state/: rag_state.py
src/vector_store/: vector_store.py
