[project]
name = "project_rag"
version = "0.1.0"
description = "RAG-based QA system that retrieves context from PDFs and research papers to generate precise, context-aware answers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai>=1.107.2",
    "pydantic>=2.11.9",
    "pypdf>=3.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "wikipedia>=1.4.0",
]
